[project]
name = "datenollm"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name="Oleg Sadov", email="oleg.sadov@dateno.io" },
]
description = "Dateno LLM services."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio_client",
    "logfire>=3.24.2",
]

[project.scripts]
dateno-ask-llm = "datenollm.cli.ask:main"
dateno-get-logs = "datenollm.cli.logs:main"
dateno-like = "datenollm.cli.like:main"
dateno-flagged-log = "datenollm.cli.flagged_log:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
