[project]
name = "datenollm"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name="Oleg Sadov", email="oleg.sadov@dateno.io" },
]
description = "Dateno LLM services."
readme = "README.md"
#requires-python = ">=3.12"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio_client",
    "logfire>=3.24.2",
]

[project.scripts]
dateno-ask-llm = "datenollm.cli.ask:main"
dateno-get-logs = "datenollm.cli.logs:main"
dateno-like = "datenollm.cli.like:main"
dateno-flagged-log = "datenollm.cli.flagged_log:main"
dateno-collab2gist = "datenollm.cli.collab2gist:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["datenollm*"]

[tool.setuptools.package-data]
datenollm = ["test/**/*"]
